# oca-fits-anal

./: .gitignore  fits-scan-an.ipynb  fits-scan.ipynb  fits-scan_v2.ipynb  fits_median.py  pyproject.toml  shutter-display.ipynb  shutter-gpt.ipynb  shutter.ipynb  shutter_mapper.py  simple.ipynb
